# Hazor

./: .clang-format  .clang-tidy  CMakeLists.txt  vcpkg.json
data/shaders/: Main.frag  Main.vert
include/: Initializations.hpp  Moving.hpp  Renderable.hpp  Rendering.hpp  Scene.hpp  Transform.hpp  Util.hpp  Window.hpp
include/rendering_internals/: ElementBuffer.hpp  Framebuffer.hpp  GPUMesh.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
src/: Camera.hpp  Engine.hpp  FileLoading.cpp  FileLoading.hpp  Initializations.hpp  InputManager.hpp  Mesh.hpp  MeshLoading.cpp  MeshLoading.hpp  RenderingHandles.hpp  main.cpp
src/rendering_internals/: ElementBuffer.hpp  Framebuffer.hpp  GPUMesh.hpp  Shader.cpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
